helm-charts/python-helm/gateway-route.yaml
# python-app/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: python-gateway-route
spec:
  parentRefs:
    - name: gke-gateway-external-lb
      namespace: dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/python"
      backendRefs:
        - name: python-app
          port: 8501
